--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
     "deploy": "$npm_execpath run build && wrangler pages deploy dist"
   },
   "dependencies": {
+    "@auth/core": "^0.35.0",
+    "@hono/auth-js": "^1.0.10",
+    "@hono/event-emitter": "^2.0.0",
+    "@hono/zod-validator": "^0.2.2",
+    "@tailwindcss/typography": "^0.5.15",
     "eventsource-parser": "^1.1.2",
-    "hono": "^4.5.1"
+    "fetch-event-source": "latest",
+    "fetch-event-stream": "latest",
+    "hono": "^4.6.3",
+    "honox": "^0.1.24",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@cloudflare/ai-utils": "latest",
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.9.0",
     "autoprefixer": "^10.4.19",
+    "cloudflare": "latest",
     "concurrently": "^8.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
