--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,8 @@ compatibility_date = "2024-06-01"
 
 [ai]
 binding = "AI"
+
+[[kv_namespaces]]
+binding = "cj_kv"
+preview_id = "2c1ebcd6c5ae4491a62d69f2282a174c"
+id = "2c1ebcd6c5ae4491a62d69f2282a174c"
