--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "fetch-event-stream": "latest",
     "hono": "^4.6.3",
     "honox": "^0.1.24",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +31,8 @@
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.9.0",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "cloudflare": "latest",
     "concurrently": "^8.2.2",
