--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "$npm_execpath run build:css && vite build",
     "build:css": "tailwindcss -i src/style.css -o public/static/style.css",
     "preview": "wrangler pages dev --live-reload dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist"
+    "deploy": "$npm_execpath run build && wrangler -j pages deploy dist",
+    "deploy:preview": "$npm_execpath run build && wrangler -j pages deploy dist -e preview",
+    "deploy:min": "$npm_execpath run build && wrangler -j pages deploy dist --minify",
+    "types": "wrangler types"
   },
   "dependencies": {
     "@auth/core": "^0.35.0",
@@ -15,6 +18,7 @@
     "@hono/event-emitter": "^2.0.0",
     "@hono/zod-validator": "^0.2.2",
     "@tailwindcss/typography": "^0.5.15",
+    "common-tags": "^1.8.2",
     "eventsource-parser": "^1.1.2",
     "fetch-event-source": "latest",
     "fetch-event-stream": "latest",
@@ -31,12 +35,17 @@
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.9.0",
+    "@types/common-tags": "^1.8.4",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "cloudflare": "latest",
     "concurrently": "^8.2.2",
+    "cookie": "^0.6.0",
     "postcss": "^8.4.38",
+    "promjs": "^0.4.2",
     "tailwindcss": "^3.4.3",
     "vite": "^5.0.12",
     "wrangler": "^3.65.1"
