--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "$npm_execpath run build:css && vite build",
     "build:css": "tailwindcss -i src/style.css -o public/static/style.css",
     "preview": "wrangler pages dev --live-reload dist",
-    "deploy": "$npm_execpath run build && wrangler -j pages deploy dist",
-    "deploy:preview": "$npm_execpath run build && wrangler -j pages deploy dist -e preview",
-    "deploy:min": "$npm_execpath run build && wrangler -j pages deploy dist --minify",
+    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
+    "deploy:preview": "$npm_execpath run build && wrangler pages deploy dist -e preview",
+    "deploy:min": "$npm_execpath run build && wrangler pages deploy dist --minify",
     "types": "wrangler types"
   },
   "dependencies": {
