--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cookie": "^0.6.0",
     "postcss": "^8.4.38",
     "promjs": "^0.4.2",
+    "react-icons": "^5.3.0",
     "tailwindcss": "^3.4.3",
     "toucan-js": "^4.0.0",
     "undici": "^6.19.8",
