--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "cai",
-  "type": "module",
   "packageManager": "npm@9.8.1",
+  "type": "module",
   "scripts": {
     "dev": "concurrently \"npm:preview\" \"npm:watch:vite\" \"npm:watch:css\"",
     "watch:vite": "vite build --watch",
-    "watch:css": "tailwindcss -i src/style.css -o public/static/style.css --watch",
+    "publish": "wrangler publish",
+    "watch:css": "./node_modules/.bin/tailwindcss -i src/style.css -o public/static/style.css --watch",
     "build": "$npm_execpath run build:css && vite build",
+    "b": "vite build",
     "wb": "wrangler build",
     "build:css": "tailwindcss -i src/style.css -o public/static/style.css",
     "preview": "wrangler pages dev --live-reload dist",
-    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
+    "deploy": "$npm_execpath run b && wrangler pages deploy dist",
     "deploy:preview": "$npm_execpath run build && wrangler pages deploy dist -e preview",
     "deploy:min": "$npm_execpath run build && wrangler pages deploy dist --minify",
     "types": "wrangler types"
@@ -44,7 +46,7 @@
     "@cloudflare/workers-types": "^4.20240208.0",
     "@hono/vite-cloudflare-pages": "^0.2.4",
     "@hono/vite-dev-server": "^0.9.0",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "latest",
     "@types/common-tags": "^1.8.4",
     "@types/mime": "^4.0.0",
     "@types/react": "^18.3.9",
@@ -58,7 +60,7 @@
     "postcss": "^8.4.38",
     "promjs": "^0.4.2",
     "react-icons": "^5.3.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "latest",
     "toucan-js": "^4.0.0",
     "undici": "^6.19.8",
     "vite": "^5.0.12",
