--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
-    "buildCommand": "npm run build:vercel",
-    "builds": [
-
-    ],
-    "routes": [
-
-    ]
+  "regions": ["sfo"],
+  "headers": [
+    {
+      "source": "./public/static/**/*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "buildCommand": "npm run build:vercel",
+  "builds": [],
+  "routes": []
 }
+
