--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "cai",
   "packageManager": "pnpm@9.1.0",
   "type": "module",
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "./*",
+      "apps/*",
+      "pkg/*"
+    ]
+  },
   "scripts": {
     "dev": "concurrently \"npm:preview\" \"npm:watch:vite\" \"npm:watch:css\"",
     "watch:vite": "vite build --watch",
@@ -12,7 +20,7 @@
     "wb": "wrangler build",
     "build:css": "tailwindcss -i src/style.css -o public/static/style.css",
     "preview": "wrangler pages dev --live-reload dist",
-    "deploy": "$npm_execpath run b && wrangler pages deploy dist",
+    "deploy": "$npm_execpath run build && wrangler pages deploy dist",
     "deploy:preview": "$npm_execpath run build && wrangler pages deploy dist -e preview",
     "deploy:min": "$npm_execpath run build && wrangler pages deploy dist --minify",
     "test:watch": "vitest --watch",
@@ -22,36 +30,52 @@
     "deploy": true
   },
   "dependencies": {
-    "@auth/core": "^0.35.2",
+    "@auth/core": "^0.35.3",
+    "@cloudflare/pages-plugin-graphql": "^1.0.4",
+    "@cloudflare/pages-plugin-turnstile": "^1.0.2",
+    "@headlessui/react": "^2.1.8",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@heroicons/react": "^2.1.5",
     "@hono/auth-js": "^1.0.10",
     "@hono/event-emitter": "^2.0.0",
     "@hono/zod-validator": "^0.2.2",
+    "@swc/helpers": "^0.5.13",
+    "better-sqlite3": "^11.3.0",
+    "clsx": "^2.1.1",
     "common-tags": "^1.8.2",
     "eventsource-parser": "^1.1.2",
     "fetch-event-source": "latest",
     "fetch-event-stream": "latest",
+    "heroicons": "^2.1.5",
+    "highlight.js": "^11.10.0",
     "hono": "^4.6.3",
     "honox": "^0.1.25",
+    "itty-router": "^5.0.18",
+    "markdown-it": "^14.1.0",
     "mime": "^4.0.4",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.2",
     "turbo": "latest",
-    "ui": "^0.2.4",
-    "zod": "^3.23.8"
+    "ui": "link:pkg/ui",
+    "zod": "^3.23.8",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@cloudflare/ai-utils": "latest",
+    "@cloudflare/ai-utils": "^1.0.1",
     "@cloudflare/kv-asset-handler": "^0.3.4",
     "@cloudflare/workers-shared": "^0.5.4",
     "@cloudflare/workers-types": "^4.20240925.0",
     "@hono/vite-cloudflare-pages": "^0.2.5",
     "@hono/vite-dev-server": "^0.9.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "latest",
     "@types/common-tags": "^1.8.4",
-    "@types/react": "^18.3.9",
+    "@types/markdown-it": "^14.1.2",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -63,10 +87,11 @@
     "promjs": "^0.4.2",
     "react-icons": "^5.3.0",
     "tailwindcss": "latest",
+    "tailwindcss-animate": "^1.0.7",
     "toucan-js": "^4.0.0",
     "undici": "^6.19.8",
     "vite": "^5.4.8",
     "vitest": "^2.1.1",
-    "wrangler": "^3.78.10"
+    "wrangler": "^3.78.12"
   }
 }
