--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://turbo.build/schema.json",
   "globalEnv": ["NODE_ENV=production"],
-  "ui": "stream",
+  "ui": "tui",
   "daemon": false,
   "remoteCache": {
     "signature": false,
@@ -23,9 +23,10 @@
       "outputs": ["src/style.css"],
       "dependsOn": []
     },
-    "preview": {
+    "b": {},
+    "build": {
       "outputs": ["dist/**"],
-      "dependsOn": ["css"],
+      "dependsOn": ["build:css"],
       "env": []
     },
     "deploy": {
